--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/
-*.iws
-*.iml
-*.ipr
+# .idea/
+# *.iws
+# *.iml
+# *.ipr
 
 ### Eclipse ###
 .apt_generated
